test/good/11-rekurencyjne-typy-algebraiczne.gg
alg List = Nil | Cons(Int, List);

fun insert(el: Int, l: List) -> List {
    case l of {
        _ ~> Cons(el, l);
        Cons(head, tail) ~> Cons(head, insert(el, tail));
    }
}

fun permutation(l: List) -> List {
    case l of {
        Cons(x, Nil) ~> l;
        Cons(head, tail) ~> insert(head, permutation(tail));
    }
}

// zwraca wszystkie permutacje listy [0, 1, 2, 3]
permutation(Cons(0, Cons(1, Cons(2, Cons(3, Nil)))))