test/bad/13-06-too-many-arguments.gg
fun f(x: Int, y: Int) -> Int {
    0
}

f(1, 2, 3)